[package]
name = "viewing_system"
version = "0.1.0"
authors = ["Lyuha <lyuha@users.noreply.github.com>"]

[dependencies]
conrod = "0.60.0"
nfd = "0.0.4"

# Optional dependencies and features
winit = { version = "0.12", optional = true }
glium = { version = "0.21", optional = true }
piston2d-graphics = { version = "0.26", optional = true }
gfx = { version = "0.17", optional = true }
gfx_core = { version = "0.8", optional = true }

[features]
piston = ["piston2d-graphics"]
gfx_rs=["gfx","gfx_core"]
